Add mask property for improved compatibility in theme.css

--- a/glassmorphism/theme.css
+++ b/glassmorphism/theme.css
@@ -528,6 +528,9 @@ h2 {
   -webkit-mask:
     linear-gradient(#fff 0 0) content-box, 
     linear-gradient(#fff 0 0);
+  mask:
+    linear-gradient(#fff 0 0) content-box, 
+    linear-gradient(#fff 0 0);
   -webkit-mask-composite: xor;
           mask-composite: exclude;
   z-index: -1;
